--- a/www/templates/account.html
+++ b/www/templates/account.html
@@ -19,47 +19,69 @@
         <p><span ui-sref="myincome">余额 : 3650.00</span></p>
       </div>
       <div class="col-20">
-        <a  ng-href="#/myntegral" nav-direction=forward  class="light subdued">领取积分 <i class="icon ion-ios-arrow-forward"></i>
+        <a ng-href="#/myntegral" nav-direction=forward class="light subdued">领取积分 <i
+          class="icon ion-ios-arrow-forward"></i>
         </a>
       </div>
     </div>
-    <div class="row row-no-padding text-center row-wrap row-center light-bg userinfo-list">
-      <a ng-href="#/organizingdata" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/data.png" alt="">
-        <p>完善资料</p>
-      </a>
-      <a ng-href="#/myorder" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/order.png" alt="">
-        <p>我的订单</p>
-      </a>
-      <a ng-href="#/mycoupon" nav-direction=forward class="col-33 padding-top userinfo-border-b"><img ng-src="img/account/coupon.png" alt="">
-        <p>我的优惠卷</p>
-      </a>
-      <a ng-href="#/mywallet" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/wallet.png" alt="">
-        <p>我的钱包</p>
-      </a>
-      <a ng-href="#/myntegral" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/integral.png" alt="">
-        <p>我的积分</p>
-      </a>
-      <a ng-href="#/addressmanage" nav-direction=forward class="col-33 padding-top userinfo-border-b"><img ng-src="img/account/address.png" alt="">
-        <p>地址管理</p>
-      </a>
-      <a ng-href="#/invitationlist" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/Invitation.png" alt="">
-        <p>邀请记录</p>
-      </a>
-      <a ng-href="#/helpfeedback" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/opinion.png" alt="">
-        <p>意见反馈</p>
-      </a>
-      <a ng-href="#/changepassword" nav-direction=forward class="col-33 padding-top userinfo-border-b"><img ng-src="img/account/password.png" alt="">
-        <p>修改密码</p>
-      </a>
-      <a ng-href="#/contactus" nav-direction=forward class="col-33 padding-top userinfo-border-r"><img ng-src="img/account/contactus.png" alt="">
-        <p>联系客服</p>
-      </a>
-      <a ng-href="#/signin" nav-direction=forward class="col-33 padding-top userinfo-border-r"><img ng-src="img/account/data.png" alt="">
-        <p>每日签到</p>
-      </a>
-      <a ng-href="#/questionnaire" nav-direction=forward class="col-33 padding-top "><img ng-src="img/account/opinion.png" alt="">
-        <p>问卷调查</p>
-      </a>
+    <div class="light-bg userinfo-list text-center">
+      <div class="row   row-center ">
+        <a ng-href="#/organizingdata" nav-direction=forward class="col padding-top border-rb"><img
+          ng-src="img/account/data.png" alt="">
+          <p>完善资料</p>
+        </a>
+        <a ng-href="#/myorder" nav-direction=forward class="col padding-top border-rb"><img
+          ng-src="img/account/order.png" alt="">
+          <p>我的订单</p>
+        </a>
+        <a ng-href="#/mycoupon" nav-direction=forward class="col padding-top border-b"><img
+          ng-src="img/account/coupon.png" alt="">
+          <p>我的优惠卷</p>
+        </a>
+      </div>
+      <div class="row    row-center ">
+        <a ng-href="#/mywallet" nav-direction=forward class="col padding-top border-rb"><img
+          ng-src="img/account/wallet.png" alt="">
+          <p>我的钱包</p>
+        </a>
+        <a ng-href="#/myntegral" nav-direction=forward class="col padding-top border-rb"><img
+          ng-src="img/account/integral.png" alt="">
+          <p>我的积分</p>
+        </a>
+
+        <a ng-href="#/addressmanage" nav-direction=forward class="col padding-top border-b"><img
+          ng-src="img/account/address.png" alt="">
+          <p>地址管理</p>
+        </a>
+      </div>
+      <div class="row   row-center ">
+        <a ng-href="#/invitationlist" nav-direction=forward class="col padding-top border-rb"><img
+          ng-src="img/account/Invitation.png" alt="">
+          <p>邀请记录</p>
+        </a>
+        <a ng-href="#/helpfeedback" nav-direction=forward class="col padding-top border-rb"><img
+          ng-src="img/account/opinion.png" alt="">
+          <p>意见反馈</p>
+        </a>
+        <a ng-href="#/changepassword" nav-direction=forward class="col padding-top border-b"><img
+          ng-src="img/account/password.png" alt="">
+          <p>修改密码</p>
+        </a>
+      </div>
+      <div class="row    row-center ">
+        <a ng-href="#/contactus" nav-direction=forward class="col padding-top border-r"><img
+          ng-src="img/account/contactus.png" alt="">
+          <p>联系客服</p>
+        </a>
+        <a ng-href="#/signin" nav-direction=forward class="col padding-top border-r"><img
+          ng-src="img/account/data.png" alt="">
+          <p>每日签到</p>
+        </a>
+        <a ng-href="#/questionnaire" nav-direction=forward class="col padding-top "><img
+          ng-src="img/account/opinion.png" alt="">
+          <p>问卷调查</p>
+        </a>
+      </div>
     </div>
     <p class="padding-top"></p>
     <div class="padding">
