--- a/www/templates/classify.html
+++ b/www/templates/classify.html
@@ -26,24 +26,24 @@
           <div id="classify-scroll-content" ng-style="{height:scrollContentHeight}" >
             <div class="row row-no-padding   text-center row-wrap row-horizontal-around">
               <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued  padding-top userinfo-border-rb">
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued  padding-top border-rb">
                <img ng-src="img/main/cp@2.jpg"  alt=""/>
                <p>伊利</p>
              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-rb">
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-rb">
                <img ng-src="img/main/cp@5.jpg"  alt=""/>
                <p>蒙牛</p>
              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-b">
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-b">
                <img ng-src="img/main/cp@6.jpg"  alt=""/>
                <p>伊利</p>
              </a>
 
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-r">
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-r">
               <img ng-src="img/main/cp@2.jpg"  alt=""/>
               <p>伊利</p>
               </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-r">
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-r">
                <img ng-src="img/main/cp@5.jpg"  alt=""/>
                <p>蒙牛</p>
              </a>
@@ -55,24 +55,24 @@
             </div>
             <div class="row row-no-padding text-center row-wrap row-horizontal-around">
               <p class="stable-bg  full-image text-left classify-details-bar"> 牛奶系列</p>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued  padding-top userinfo-border-rb">
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued  padding-top border-rb">
                 <img ng-src="img/main/cp@2.jpg"  alt=""/>
                 <p>伊利</p>
               </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-rb">
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-rb">
                 <img ng-src="img/main/cp@5.jpg"  alt=""/>
                 <p>蒙牛</p>
               </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-b">
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-b">
                 <img ng-src="img/main/cp@6.jpg"  alt=""/>
                 <p>伊利</p>
               </a>
 
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-r">
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-r">
                 <img ng-src="img/main/cp@2.jpg"  alt=""/>
                 <p>伊利</p>
               </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-r">
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-r">
                 <img ng-src="img/main/cp@5.jpg"  alt=""/>
                 <p>蒙牛</p>
               </a>
@@ -83,24 +83,24 @@
             </div>
             <div class="row row-no-padding text-center row-wrap row-horizontal-around">
               <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued  padding-top userinfo-border-rb">
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued  padding-top border-rb">
                 <img ng-src="img/main/cp@2.jpg"  alt=""/>
                 <p>伊利</p>
               </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-rb">
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-rb">
                 <img ng-src="img/main/cp@5.jpg"  alt=""/>
                 <p>蒙牛</p>
               </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-b">
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-b">
                 <img ng-src="img/main/cp@6.jpg"  alt=""/>
                 <p>伊利</p>
               </a>
 
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-r">
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-r">
                 <img ng-src="img/main/cp@2.jpg"  alt=""/>
                 <p>伊利</p>
               </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-r">
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top border-r">
                 <img ng-src="img/main/cp@5.jpg"  alt=""/>
                 <p>蒙牛</p>
               </a>
