元亨祥母婴商城

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,23 +5,23 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive tabs-light">
   <!-- 首页 Tab -->
-  <ion-tab title="首页" icon-off="ion-ios-home-outline" icon-on="ion-home" href="#/tab/main">
+  <ion-tab title="首页" icon-off="iconfont icon-shouye" icon-on="iconfont icon-shouye" href="#/tab/main">
     <ion-nav-view name="tab-main"></ion-nav-view>
   </ion-tab>
 
   <!-- 分类Tab -->
-  <ion-tab title="分类" icon-off="ion-ios-keypad-outline" badge-style="badge-assertive" badge="0"
-           icon-on="ion-ios-keypad" href="#/tab/classify">
+  <ion-tab title="分类" icon-off="iconfont icon-viewgallery" icon-on="iconfont icon-viewgallery"
+            href="#/tab/classify">
     <ion-nav-view name="tab-classify"></ion-nav-view>
   </ion-tab>
 
   <!--购物车 Tab -->
-  <ion-tab title="购物车" icon-off="ion-ios-cart-outline" icon-on="ion-ios-cart" href="#/tab/shoppingcart">
+  <ion-tab title="购物车" icon-off="iconfont icon-gouwuche" icon-on="iconfont icon-gouwuche" badge-style="badge-assertive" badge="0" href="#/tab/shoppingcart">
     <ion-nav-view name="tab-shoppingcart"></ion-nav-view>
   </ion-tab>
 
   <!--我的 Tab -->
-  <ion-tab title="我的" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" href="#/tab/account">
+  <ion-tab title="我的" icon-off="iconfont icon-wodejuhuasuan" icon-on="iconfont icon-wodejuhuasuan" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
