--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -3,7 +3,7 @@
     <div class="row text-center  light row-center " id="main-search">
       <span class="col-15 nowrap">深圳 <i class="icon ion-arrow-down-b"></i></span>
       <input type="text" class="col-75" placeholder="  请输入关键字"/>
-      <i class="col  icon ion-ios-search"></i>
+      <i class="col   iconfont icon-seach  "></i>
     </div>
     <ion-slide-box show-pager="true" does-continue="true" auto-play="true" slide-interval="3000"
                    delegate-handle="slideboximgs" id="main-slide">
