--- a/www/templates/main/productlist.html
+++ b/www/templates/main/productlist.html
@@ -1,14 +1,13 @@
 <ion-view>
   <ion-nav-buttons side="left">
-    <button class="button back-button buttons  header-item" ng-click="$ionicGoBack()">
-      <i class="icon ion-ios-arrow-back"></i>
+    <button class="button button-clear icon ion-ios-arrow-back " ng-click="$ionicGoBack()">
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
     <h1 class="title">产品列表</h1>
   </ion-nav-title>
   <ion-nav-buttons side="right">
-    <button class="button icon ion-ios-search no-border grey" ng-click="modal.show()"></button>
+    <button class="button iconfont icon-seach  button-clear grey" ng-click="modal.show()"></button>
   </ion-nav-buttons>
 
   <ion-tabs id="productlist-tab" class="tabs-light tabs-top  " delegate-handle="my-handle-productlist">
