--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -6,7 +6,7 @@
   <ion-content overflow-scroll="false" >
     <div class="bar item-input-inset positive-bg ">
       <label class="item-input-wrapper">
-        <i class="icon ion-ios-search placeholder-icon"></i>
+        <i class="iconfont icon-seach   placeholder-icon"></i>
         <input type="search" autofocus placeholder="请输入您要搜索的内容" class="light-bg"  ng-model="search.searchcontent"/>
       </label>
       <button class="button button-positive stable no-border" ng-click="" >
