--- a/www/templates/classify.html
+++ b/www/templates/classify.html
@@ -1,15 +1,14 @@
 <ion-view>
   <ion-nav-buttons side="left">
-    <button class="button back-button buttons  header-item" nav-direction=back native-ui-sref="tab.main"
+    <button class="button button-clear icon ion-ios-arrow-back" nav-direction=back native-ui-sref="tab.main"
             native-options="{type: 'slide',direction: 'right'}">
-      <i class="icon ion-ios-arrow-back"></i>
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
     <h1 class="title">产品分类</h1>
   </ion-nav-title>
   <ion-nav-buttons side="right">
-    <button class="button icon ion-ios-search no-border grey" ng-click="modal.show()"></button>
+    <button class="button iconfont icon-seach  button-clear grey" ng-click="modal.show()"></button>
   </ion-nav-buttons>
   <ion-content overflow-scroll="false" has-bouncing="true" >
     <div class="row row-no-padding" id="classify">
