--- a/www/templates/main/productdetails.html
+++ b/www/templates/main/productdetails.html
@@ -1,14 +1,13 @@
 <ion-view>
   <ion-nav-buttons side="left">
-    <button class="button back-button buttons  header-item" ng-click="$ionicGoBack()">
-      <i class="icon ion-ios-arrow-back"></i>
+    <button class="button button-clear icon ion-ios-arrow-back" ng-click="$ionicGoBack()">
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
     <h1 class="title">产品详情</h1>
   </ion-nav-title>
   <ion-nav-buttons side="right">
-    <button class="button icon ion-ios-search no-border grey" ng-click="modal.show()"></button>
+    <button class="button iconfont icon-seach  button-clear grey" ng-click="modal.show()"></button>
   </ion-nav-buttons>
   <ion-content overflow-scroll="false" class="stable-bg" id="productdetails">
     <ion-slide-box show-pager="true" does-continue="true" auto-play="true" slide-interval="3000"
@@ -66,15 +65,15 @@
   <ion-tabs class="tabs-icon-top tabs-color-active-positive tabs-light productdetails-footer-bar ">
 
     <!--购物车 Tab -->
-    <ion-tab title="购物车" icon-off="ion-ios-cart-outline" icon-on="ion-ios-cart" badge-style="badge-positive" badge="2">
+    <ion-tab title="购物车" icon-off="iconfont icon-gouwuche" icon-on="iconfont icon-gouwuche" badge-style="badge-positive" badge="2">
     </ion-tab>
 
     <!-- 收藏Tab -->
-    <ion-tab title="收藏" icon-off="ion-ios-star-outline" icon-on="ion-ios-star">
+    <ion-tab title="收藏" icon-off="iconfont icon-jushoucang" icon-on="iconfont icon-jushoucanggift">
     </ion-tab>
 
     <!-- 首页 Tab -->
-    <ion-tab title="首页" icon-off="ion-ios-home-outline" icon-on="ion-home" nav-direction=back href="#/tab/main">
+    <ion-tab title="首页" icon-off="iconfont icon-icon11" icon-on="iconfont icon-icon11" nav-direction=back href="#/tab/main">
     </ion-tab>
 
     <button nav-direction=forward  native-ui-sref="tab.shoppingcart" native-options="{type: 'slide',direction: 'left'}" class="tab col-40 button  button-positive ">加入购物车</button>
