--- a/www/templates/main/revieworder.html
+++ b/www/templates/main/revieworder.html
@@ -1,7 +1,6 @@
 <ion-view>
   <ion-nav-buttons side="left">
-    <button class="button back-button buttons  header-item" ng-click="$ionicGoBack()">
-      <i class="icon ion-ios-arrow-back"></i>
+    <button class="button button-clear icon ion-ios-arrow-back" ng-click="$ionicGoBack()">
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
