--- a/www/templates/shoppingcart.html
+++ b/www/templates/shoppingcart.html
@@ -1,8 +1,7 @@
 <ion-view>
   <ion-nav-buttons side="left">
-    <button class="button back-button buttons  header-item" nav-direction=back native-ui-sref="tab.main"
+    <button class="button button-clear icon ion-ios-arrow-back" nav-direction=back native-ui-sref="tab.main"
             native-options="{type: 'slide',direction: 'right'}">
-      <i class="icon ion-ios-arrow-back"></i>
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
