元亨祥母婴商城

--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -52,8 +52,8 @@
         <img ng-src="img/main/cp@2.jpg" alt="">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i
-          class="col icon ion-ios-cart positive text-right"></i></p>
+        <p class="row row-center"><span class="col-75 energized"><strong >￥49.</strong><span>00</span></span> <i
+          class="col iconfont icon-gouwuche positive text-right"></i></p>
       </a>
       <ion-item>
         <ion-scroll ng-style="{width:scrollWidth}" delegate-handle="main-scroll"  direction="x" zooming="true" overflow-scroll="false"  scrollbar-x="false" has-bouncing="true" class="main-scroll">
@@ -62,31 +62,31 @@
               <img ng-src="img/main/cp@3.jpg" class="full-image" alt=""/>
               <p class="text-wrap">宓驰婴儿推车超轻便可做可躺折叠</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
-                class="col icon ion-ios-cart positive text-right"></i></p>
+                class="col iconfont icon-gouwuche positive text-right"></i></p>
             </a>
             <a ng-href="#/productdetails" nav-direction=forward >
               <img ng-src="img/main/cp@1.jpg" class="full-image" alt="">
               <p class="text-wrap">爱得利奶瓶宽口径婴儿奶瓶带吸管手</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
-                class="col icon ion-ios-cart positive text-right"></i></p>
+                class="col iconfont icon-gouwuche positive text-right"></i></p>
             </a>
             <a ng-href="#/productdetails" nav-direction=forward >
               <img ng-src="img/main/toys.png" class="full-image" alt="">
               <p class="text-wrap">Little Tikes美国小太克儿童玩具</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
-                class="col icon ion-ios-cart positive text-right"></i></p>
+                class="col iconfont icon-gouwuche positive text-right"></i></p>
             </a>
             <a ng-href="#/productdetails" nav-direction=forward >
               <img ng-src="img/main/cp@5.jpg" class="full-image" alt="">
               <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
-                class="col icon ion-ios-cart positive text-right"></i></p>
+                class="col iconfont icon-gouwuche positive text-right"></i></p>
             </a>
             <a ng-href="#/productdetails" nav-direction=forward >
               <img ng-src="img/main/cp@5.jpg" class="full-image" alt="">
               <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
-                class="col icon ion-ios-cart positive text-right"></i></p>
+                class="col iconfont icon-gouwuche positive text-right"></i></p>
             </a>
           </div>
 
@@ -100,22 +100,22 @@
         <img ng-src="img/main/cp@3.jpg" alt="">
         <h2>都市型婴儿四轮推车遮阳车</h2>
         <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车这样车罩 轻便型</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i
-          class="col icon ion-ios-cart positive text-right"></i></p>
+        <p class="row row-center"><span class="col-75 energized"><strong>￥49.</strong><span>00</span></span> <i
+          class="col iconfont icon-gouwuche positive text-right"></i></p>
       </a>
       <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
         <img ng-src="img/main/cp@1.jpg" alt="">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i
-          class="col icon ion-ios-cart positive text-right"></i></p>
+        <p class="row row-center"><span class="col-75 energized"><strong >￥49.</strong><span>00</span></span> <i
+          class="col iconfont icon-gouwuche positive text-right"></i></p>
       </a>
       <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
         <img ng-src="img/main/cp@5.jpg" alt="">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i
-          class="col icon ion-ios-cart positive text-right"></i></p>
+        <p class="row row-center"><span class="col-75 energized"><strong >￥49.</strong><span>00</span></span> <i
+          class="col iconfont icon-gouwuche positive text-right"></i></p>
       </a>
     </ion-list>
   </ion-content>
