--- a/www/css/style.css
+++ b/www/css/style.css
@@ -14,31 +14,31 @@
   -webkit-justify-content: space-around;
   -moz-justify-content: space-around;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
 
 .row-horizontal-start {
   -webkit-justify-content: flex-start;
   -moz-justify-content: flex-start;
   -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
 }
 
 .row-horizontal-end {
   -webkit-justify-content: flex-end;
   -moz-justify-content: flex-end;
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
 }
 
 .row-horizontal-between {
   -webkit-justify-content: space-between;
   -moz-justify-content: space-between;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .center-block {
@@ -112,7 +112,6 @@
   padding: 0;
 }
 
-
 /*修改覆盖ActionSheet框默认样式*/
 .action-s .button {
   color: #FF81B0;
@@ -161,9 +160,15 @@
   border-color: rgba(221, 221, 221, 0.3) !important;
 }
 
-.buttons.buttons-left .ion-ios-arrow-back:before{
+.buttons.buttons-left .ion-ios-arrow-left:before {
   color: #aaa;
-  font-size: 1.8rem!important;
+  font-size: 1.8rem !important;
+  padding-left: 0.5rem;
+}
+
+.buttons.buttons-right button:before {
+  font-size: 1.1rem;
+  padding-right: 0.6rem;
 }
 
 /* 去掉时候点击按钮灰色边框颜色*/
@@ -228,11 +233,12 @@
   white-space: nowrap;
 }
 
- .text-wrap {
+.text-wrap {
   white-space: normal !important;
 }
+
 /*  ios没有导航bar状态栏兼容处理*/
-.platform-ios.platform-cordova  .no-nav-header{
+.platform-ios.platform-cordova .no-nav-header {
   margin-top: 20px;
 }
 
@@ -240,7 +246,7 @@
   padding-bottom: 0
 }
 
-.tab-item  .iconfont {
+.tab-item .iconfont {
   padding-top: 0.5rem;
   font-size: 1.5rem;
 }
