--- a/www/templates/main/productdetails.html
+++ b/www/templates/main/productdetails.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-nav-buttons side="left">
-    <button class="button button-clear icon ion-ios-arrow-back" ng-click="$ionicGoBack()">
+    <button class="button button-clear icon ion-ios-arrow-left" ng-click="$ionicGoBack()">
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
