--- a/www/templates/shoppingcart.html
+++ b/www/templates/shoppingcart.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-nav-buttons side="left">
-    <button class="button button-clear icon ion-ios-arrow-back" nav-direction=back native-ui-sref="tab.main"
+    <button class="button button-clear ion-ios-arrow-left" nav-direction=back native-ui-sref="tab.main"
             native-options="{type: 'slide',direction: 'right'}">
     </button>
   </ion-nav-buttons>
