--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,12 +1,15 @@
 #main-search {
   position: fixed;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   z-index: 1100;
 }
 
 #main-search input {
+
   padding-left: 0.5rem;
   border-radius: 0.3rem;
+  height: 2rem;
+  line-height: 2rem;
   background-color: rgba(255, 255, 255, 0.8);
 }
 
