--- a/www/templates/account/register.html
+++ b/www/templates/account/register.html
@@ -9,8 +9,8 @@
       <div class="list">
         <label class="item item-input padding-top">
           <span class="input-label "> 手机号 </span>
-          <input type="number" name="username" placeholder="请输入手机号码" ng-model="user.username"
-                 ng-maxlength="11" required/>
+          <input type="number" name="username" placeholder="请输入手机号码" ng-model="user.mobile"
+                 check-form ng-blur="checkForm(user.mobile,'手机号输入错误','mobilephone','')"   ng-change="checkphone(user.mobile)"   ng-maxlength="11" required/>
         </label>
         <label class="item item-input">
           <span class="input-label "> 密码 </span>
@@ -24,13 +24,12 @@
           <span class="input-label"> 验证码 </span>
           <span class="row row-no-padding">
           <input type="number" class="col-55" placeholder="请输入验证码" ng-model="user.verificationcode" required/>
-            <button class="button button-small button-positive button-outline col-33 ">获取验证码</button>
+            <button class="button button-small button-positive  col-33 " ng-class="{false:'button-outline'}[paraclass]" ng-click="getVerifyCode()">{{paracont}}</button>
           </span>
         </div>
       </div>
       <div class="padding">
-        <button class="button button-positive full-image" ng-disabled="!registerForm.$valid"  ng-click="registerSubmit()">立即注册</button>
-
+        <button class="button button-positive full-image"  ng-disabled="!registerForm.$valid"  ng-click="registerSubmit()">立即注册</button>
       </div>
     </form>
   </ion-content>
