--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -9,7 +9,7 @@
       <div class="list">
         <label class="item item-input padding-top">
           <span class="input-label icon ion-android-phone-portrait"> 手机号 </span>
-          <input type="number" name="username" placeholder="请输入手机号码" ng-model="user.username"
+          <input type="number"  placeholder="请输入手机号码" ng-model="user.mobile"  check-form ng-blur="checkForm(user.mobile,'手机号输入错误','mobilephone','')"
                  ng-maxlength="11" required/>
         </label>
 
