--- a/www/templates/account/register.html
+++ b/www/templates/account/register.html
@@ -14,7 +14,7 @@
         </label>
         <label class="item item-input">
           <span class="input-label "> 密码 </span>
-          <input type="number" placeholder="请输入密码" ng-model="user.password" required/>
+          <input type="password" placeholder="请输入密码" ng-model="user.password" required/>
         </label>
         <label class="item item-input">
           <span class="input-label"> 邀请码 </span>
