--- a/www/templates/account/changepassword.html
+++ b/www/templates/account/changepassword.html
@@ -10,19 +10,19 @@
 
         <label class="item item-input">
           <span class="input-label "> 新密码 </span>
-          <input type="number" placeholder="请输入新密码" ng-model="user.newpassword" required/>
+          <input type="password" placeholder="请输入新密码" ng-model="user.newPwd" required/>
         </label>
 
         <label class="item item-input">
           <span class="input-label "> 确认密码 </span>
-          <input type="number" placeholder="请再次输入密码" ng-model="user.affirmpassword" required/>
+          <input type="password" placeholder="请再次输入密码" ng-model="user.reNewPwd" required/>
         </label>
 
         <div class="item item-input">
           <span class="input-label"> 验证码 </span>
           <span class="row row-no-padding">
-          <input type="number" class="col-55" placeholder="请输入验证码" ng-model="user.verificationcode" required/>
-            <button class="button button-small button-positive button-outline col-33">获取验证码</button>
+          <input type="number" class="col-55" placeholder="请输入验证码" ng-model="user.verify" required/>
+            <button class="button button-small button-positive  col-33" ng-class="{false:'button-outline'}[paraclass]" ng-click="getVerifyCode()">{{paracont}}</button>
           </span>
         </div>
       </div>
