--- a/www/templates/account/addressmanage.html
+++ b/www/templates/account/addressmanage.html
@@ -15,7 +15,7 @@
       <div ng-repeat="item in addresslist">
         <ion-item >
           <div class="row"><i class="col-10 icon ion-disc " ng-class="{false:'grey',true:'positive'}[selectindex==$index]" ></i>
-            <p ng-click="selectAddress($index)" class="padding-right"> {{item}}</p>
+            <p ng-click="selectAddress($index)" class="padding-right"> {{item.province + item.city + item.area +item.address}}</p>
             <a ng-href="#/addaddress"  class="col-10 grey  icon ion-ios-compose-outline text-center"></a>
             <a ng-click="deleteAddress($index)" class=" col-10 icon ion-ios-trash-outline grey text-center"></a>
           </div>
