--- a/www/templates/account/helpfeedback.html
+++ b/www/templates/account/helpfeedback.html
@@ -13,7 +13,7 @@
           建议描述
         </ion-item>
         <ion-item class="item-input item-borderless">
-          <textarea rows="8" ng-model="helpfeedback.content" placeholder="欢迎反馈建议..." ng-maxlength="2000"
+          <textarea rows="8" ng-model="helpinfo.content" placeholder="欢迎反馈建议..." ng-maxlength="2000"
                     required></textarea>
         </ion-item>
       </ion-list>
