--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -5,9 +5,9 @@
   </ion-header-bar>
   <ion-content overflow-scroll="false" >
     <div class="bar item-input-inset positive-bg ">
-      <label class="item-input-wrapper">
+      <label class="item-input-wrapper light-bg">
         <i class="iconfont icon-seach   placeholder-icon"></i>
-        <input type="search" autofocus placeholder="请输入您要搜索的内容" class="light-bg"  ng-model="search.searchcontent"/>
+        <input type="search" autofocus placeholder="请输入您要搜索的内容"   ng-model="search.searchcontent"/>
       </label>
       <button class="button button-positive stable no-border" ng-click="" >
         搜索
